fixed alignments

--- a/css/main.css
+++ b/css/main.css
@@ -15,42 +15,24 @@ html {
   }
 
 div {
-    width: 900px;
+    width: 1000px;
     margin-top: 20px;
     margin-right: auto;
     margin-left: auto;
-    background-color: #f3f5f0;
+    background-color: #f3f5f043;
     overflow: hidden;
+    display: flex;
+    justify-content: space-between;
 }
 
-h1 {font-family: "Josefin Sans", sans-serif;font-weight: 500; font-size: 17px;font-style: normal;margin-left: 20px; margin-top: 15px;margin-right: 20px;color:rgb(8, 32, 24) }
-h2 {font-family: "Inter", sans-serif;font-weight: 600;font-style: normal;margin-left: 20px; margin-top: 50px;color:rgb(8, 32, 24)}
-h3 {font-family: "Inter", sans-serif;font-weight: 600; font-size: 20px;font-style: normal;margin-left: 20px;color:rgb(8, 32, 24)}
+h1 {font-family: "skolar-latin", serif; font-weight: 700; font-style: normal; margin-left: 20px; margin-top: 15px;margin-right: 20px;color:rgb(8, 32, 24) }
+h2 {font-family: "skolar-latin", serif; font-weight: 400; font-style: normal;margin-left: 20px; margin-top: 50px;color:rgb(8, 32, 24)}
+h3 {font-family: "skolar-latin", serif; font-weight: 400; font-style: italic;margin-left: 20px;color:rgb(8, 32, 24)}
 
-.left {
-    text-align: left;
-    float: left;
-    clear: none;
-    width: 50%;
-}
-.right {
-    text-align: right;
-    float: right;
-    clear: none;
-    width: 50%;
-}
+h2 {text-align: right;}
 
-img {
-    display: block;
-    margin-left: 550px;
-    margin-top: 20px;
-  }
-img {
-    position: absolute;
-    top: 0 px;
-    left: 0 px;
-    z-index: 1;
-}
+
+
 
 
 
